# explainit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  DESCRIPTION.md  LICENSE  README.md  ci_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  test_notebook.ipynb  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: backlog_request_template.md  bug_report_template.md  doc_fix_template.md  feature_request_template.md
.github/workflows/: publish.yml  release.yml  tests.yml
docs/: README.md  SUMMARY.md  codebase-structure.md  faq.md  getting-started.md  roadmap.md
docs/stat-tests/: stat-tests-conditions.csv
examples/: getting-started.ipynb
examples/data/: production_data.csv  reference_data.csv
explainit/: __init__.py  app.py  banner.py  correlation.py  dashboard.py  header.py  tabs.py  utils.py  workflow.py
explainit/analyzer/: data_summary.py  feature_stats_analyzer.py  feature_summary.py
explainit/assets/: base-styles.css  custom-styles.css  fonts.css
explainit/correlations/: correlation_heatmaps.py  correlation_table.py  correlations.py
explainit/graphs/: additional_cat_graphs.py  additional_num_graphs.py  cat_target_plot.py  feature_stats_plots.py  num_target_plot.py  numerical_target_behaviour.py
explainit/stattests/: __init__.py  chi2_test.py  jensenshannon_test.py  kl_div.py  ks_test.py  stat_test.py  utils.py  wasserstein_distance_test.py  z_test.py
tests/: analyzer_test.py  stattests_test.py  utils_test.py
workflow/: workflow.md
