[metadata]
name = explainit
version = 1.2.1
description = A modern, enterprise-ready business intelligence web application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.katonic.ai/
author = Katonic Pty Ltd.
author_email = shailesh.kumar@katonic.ai
license = Apache-2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation=https://docs.katonic.ai/
    Source=https://github.com/katonic-dev/explainit
    Issues=https://github.com/katonic-dev/explainit/issues
    Changelog=https://github.com/katonic-dev/explainit/blob/master/CHANGELOG.md
summary = Web Application for MLOps

[options]
packages = find:
install_requires =
    Brotli>=1.0.9
    Flask>=2.2.2
    Flask-Compress>=1.12
    Jinja2>3,<4
    MarkupSafe>=2.1.1
    Werkzeug>=2.2.2
    certifi>=2022.6.15
    click>8.0.0,<9.0.0
    colorama
    dash>=2.6.1
    dash-core-components>=2.0.0
    dash-daq>=0.5.0
    dash-html-components>=2.0.0
    dash-table>=5.0.0
    importlib-metadata==4.12.0
    itsdangerous==2.1.2
    numpy>1.22,<3
    orjson>=3.7.12
    pandas>=1.4.3,<2
    plotly>=5.10.0
    python-dateutil>=2.8.2
    pytz>=2022.2.1
    six>=1.16.0
    scipy>=1.5.4
    tenacity>7,<9
    zipp==3.8.1
python_requires = >=3.8
include_package_data = True
zip_safe = no

[options.packages.find]
include = explainit, explainit.*

[options.extras_require]
testing =
    flake8>=3.9
    mypy>=0.910
    pytest>=6.0
    pytest-cov>=2.0
    tox==3.14.6
    virtualenv==20.0.33

[options.package_data]
* = assets/*.css, assets/*.png, assets/*.csv, *.py
explainit = py.typed

[flake8]
max-line-length = 160
